# SyntheticImageRenderer

./: CMakeLists.txt  README.md  main.cpp
